--- a/internal/standalone/frontend/package.json
+++ b/internal/standalone/frontend/package.json
@@ -1,21 +1,34 @@
 {
-  "name": "standalone",
-  "version": "0.0.1",
-  "description": "",
-  "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "typescript": "^4.8.2",
-    "vite": "^3.0.9",
-    "vite-plugin-solid": "^2.3.0"
-  },
-  "dependencies": {
-    "solid-js": "^1.5.1"
-  },
-  "author": "Justin Awrey"
+    "name": "standalone",
+    "version": "0.0.1",
+    "description": "",
+    "type": "module",
+    "scripts": {
+        "start": "vite",
+        "dev": "vite",
+        "build": "vite build",
+        "serve": "vite preview",
+        "format": "prettier . --write",
+        "lint": "eslint ."
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "@eslint/js": "^9.9.1",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^9.9.1",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-solid": "^0.14.3",
+        "globals": "^15.9.0",
+        "postcss": "^8.4.41",
+        "prettier": "^3.3.3",
+        "tailwindcss": "^3.4.10",
+        "typescript": "^4.8.2",
+        "typescript-eslint": "^8.3.0",
+        "vite": "^3.0.9",
+        "vite-plugin-solid": "^2.3.0"
+    },
+    "dependencies": {
+        "solid-js": "^1.5.1"
+    },
+    "author": "Justin Awrey"
 }
