--- a/internal/standalone/frontend/package.json
+++ b/internal/standalone/frontend/package.json
@@ -3,6 +3,9 @@
     "version": "0.0.1",
     "description": "",
     "type": "module",
+    "engines": {
+        "node": "22"
+    },
     "scripts": {
         "start": "vite",
         "dev": "vite",
