--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: 'internal/standalone/frontend/package.json'
-      - run: cd internal/standalone/frontend
-      - run: pwd
       - run: npm ci
+        working-directory: ./internal/standalone/frontend
       - run: npx prettier . --check
+        working-directory: ./internal/standalone/frontend
