--- a/.github/workflows/tsc.yml
+++ b/.github/workflows/tsc.yml
@@ -20,7 +20,7 @@ jobs:
           go-version-file: 'go.mod'
       - run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
       - run: wails generate module
-        working-directory: ./internal/standalone/frontend
+        working-directory: ./internal/standalone
       - run: npm ci
         working-directory: ./internal/standalone/frontend
       - run: npm run typecheck
