--- a/.github/workflows/tsc.yml
+++ b/.github/workflows/tsc.yml
@@ -19,7 +19,8 @@ jobs:
         with:
           go-version-file: 'go.mod'
       - run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
-      - run: wails generate module
+      # for some reason 'wails generate module' requires on the 'dist' folder to exist -- just build
+      - run: wails build
         working-directory: ./internal/standalone
       - run: npm ci
         working-directory: ./internal/standalone/frontend
