--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Install NodeJS
         uses: actions/setup-node@v4
         with:
-          node-version-file: 'internal/standalone/frontend/package.json'
+          node-version-file: 'frontend/package.json'
       - run: npm ci
-        working-directory: ./internal/standalone/frontend
+        working-directory: ./frontend
       - run: npx prettier . --check
-        working-directory: ./internal/standalone/frontend
+        working-directory: ./frontend
