--- a/.github/workflows/tsc.yml
+++ b/.github/workflows/tsc.yml
@@ -13,15 +13,14 @@ jobs:
       - name: Install NodeJS
         uses: actions/setup-node@v4
         with:
-          node-version-file: 'internal/standalone/frontend/package.json'
+          node-version-file: 'frontend/package.json'
       - name: Install go
         uses: actions/setup-go@v5
         with:
           go-version-file: 'go.mod'
       - run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
       - run: wails generate module
-        working-directory: ./internal/standalone
       - run: npm ci
-        working-directory: ./internal/standalone/frontend
+        working-directory: ./frontend
       - run: npm run typecheck
-        working-directory: ./internal/standalone/frontend
+        working-directory: ./frontend
